force-app/main/default/objects/Order/fields/DRC_NBC_S_GST__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_S_GST__c</fullName>
    <formula>IF(
    OR(
        AND(
            ISPICKVAL(DRC_NBC_Type__c, &quot;Domestic&quot;),
            TEXT(Account.BillingStateCode) = &quot;MH&quot;
        ),
        AND(
            ISPICKVAL(DRC_NBC_Sample_Type__c, &quot;Paid Sample&quot;),
            TEXT(Account.BillingStateCode) = &quot;MH&quot;
        )
    ),
    DRC_NBC_Total_Amount__c *
    IF(
        Is_Domestic_Merchnat__c,
        0.001,
        VALUE($Label.DRC_NBC_SGST_Tax_Rate)
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>