force-app/main/default/objects/Order/fields/DRC_NBC_SalesPerson_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_SalesPerson_Code__c</fullName>
    <label>SalesPerson Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ajit Phadke</fullName>
            </value>
            <value>
                <fullName>Ajit Vasudevan</fullName>
            </value>
            <value>
                <fullName>AKSHTA SAWANT</fullName>
            </value>
            <value>
                <fullName>Amit Drolia</fullName>
            </value>
            <value>
                <fullName>Bhavesh Tambe</fullName>
            </value>
            <value>
                <fullName>Jigna Shah</fullName>
            </value>
            <value>
                <fullName>Kirit Acharya</fullName>
            </value>
            <value>
                <fullName>Manali Maniyar</fullName>
            </value>
            <value>
                <fullName>Nirmal Mansukhani</fullName>
            </value>
            <value>
                <fullName>Shekhar Rege</fullName>
            </value>
            <value>
                <fullName>Shirley D&apos;silva</fullName>
            </value>
            <value>
                <fullName>Tanay Drolia</fullName>
            </value>
            <value>
                <fullName>Vijay Gurnani</fullName>
            </value>
            <value>
                <fullName>Yash Drolia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>