force-app/main/default/objects/Order/fields/DRC_NBC_Sample_Name__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Sample_Name__c</fullName>
    <label>Sample Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>