force-app/main/default/objects/Order/fields/DRC_NBC_Sample_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Sample_Sequence_Number__c</fullName>
    <label>Sample Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>