force-app/main/default/objects/Order/fields/DRC_NBC_Sample_Shipping_Cost__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Sample_Shipping_Cost__c</fullName>
    <label>Sample Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>