force-app/main/default/objects/Order/fields/DRC_NBC_Sample_Status__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Sample_Status__c</fullName>
    <label>Sample Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Under Evaluation</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Commercially Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>