force-app/main/default/objects/Order/fields/DRC_NBC_Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Sample_Type__c</fullName>
    <label>Sample Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Sample</fullName>
            </value>
            <value>
                <fullName>Paid Sample</fullName>
            </value>
            <value>
                <fullName>Test Sample</fullName>
            </value>
            <value>
                <fullName>Free Sample</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>