force-app/main/default/objects/Order/fields/DRC_NBC_Select_Bank__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Select_Bank__c</fullName>
    <label>Bank Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICICI BANK CA</fullName>
            </value>
            <value>
                <fullName>ICICI BANK LTD EEFC a/c</fullName>
            </value>
            <value>
                <fullName>BANK OF BARODA EEFC a/c</fullName>
            </value>
            <value>
                <fullName>BANK OF BARODA 167</fullName>
            </value>
            <value>
                <fullName>BANK OF BARODA INR A/C</fullName>
            </value>
            <value>
                <fullName>YES BANK A/C 131</fullName>
            </value>
            <value>
                <fullName>SBER BANK INR A/C 3900</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>