force-app/main/default/objects/Order/fields/DRC_NBC_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Shipment_Date__c</fullName>
    <label>Shipment Date</label>
    <type>Date</type>
</CustomField>