force-app/main/default/objects/Order/fields/DRC_NBC_Shipment_Method__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Shipment_Method__c</fullName>
    <label>Pre Carriage By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By SEA</fullName>
            </value>
            <value>
                <fullName>By AIR</fullName>
            </value>
            <value>
                <fullName>AirPlane</fullName>
                <isActive>false</isActive>
                <label>AirPlane</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>