force-app/main/default/objects/Order/fields/DRC_NBC_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Address Id</label>
    <referenceTo>DRC_NBC_Addresses__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>