force-app/main/default/objects/Order/fields/DRC_NBC_Shipping_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Shipping_Address_Id__c</fullName>
    <label>Shipping Address Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>