force-app/main/default/objects/Order/fields/DRC_NBC_Special_request__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Special_request__c</fullName>
    <label>Special request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>