force-app/main/default/objects/Order/fields/DRC_NBC_TCS_Amount__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_TCS_Amount__c</fullName>
    <label>TCS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>