force-app/main/default/objects/Order/fields/DRC_NBC_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Terms_and_Conditions__c</fullName>
    <label>Terms and Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>