force-app/main/default/objects/Order/fields/DRC_NBC_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>OrderItem.DRC_NBC_Total_Price__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>