force-app/main/default/objects/Order/fields/DRC_NBC_Tracking_Id__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Tracking_Id__c</fullName>
    <label>Tracking Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>