force-app/main/default/objects/Order/fields/DRC_NBC_Transport_Agent__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Transport_Agent__c</fullName>
    <label>Transport Agent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAKASH TRANSPORT SERVICE</fullName>
            </value>
            <value>
                <fullName>ABHINAV TRANSPORT (INDIA) PVT LTD</fullName>
            </value>
            <value>
                <fullName>ACCURATE FREIGHT CARRIERS PVT LTD</fullName>
            </value>
            <value>
                <fullName>AVINASH CARGO PRIVATE LIMITED (ACPL)</fullName>
            </value>
            <value>
                <fullName>ADITYA TRANSPORT SERVICE</fullName>
            </value>
            <value>
                <fullName>AJANTA TRANSPORT CO.</fullName>
            </value>
            <value>
                <fullName>ALLAHABAD ROADLINES</fullName>
            </value>
            <value>
                <fullName>JK TRANSPORT AMBATTUR CC</fullName>
            </value>
            <value>
                <fullName>AMIT TRANSPORT-TARAPUR</fullName>
            </value>
            <value>
                <fullName>JK TRANSPORT ANAMBAKKAM CC</fullName>
            </value>
            <value>
                <fullName>CAPITAL CARRIER-ANKLESHWAR</fullName>
            </value>
            <value>
                <fullName>ANMOL RAJENDRA</fullName>
            </value>
            <value>
                <fullName>APNA GOODS CARRIER</fullName>
            </value>
            <value>
                <fullName>ASSOCIATED ROAD CARRIERS LIMITED</fullName>
            </value>
            <value>
                <fullName>ARC PARCEL SERVICE PVT LTD</fullName>
            </value>
            <value>
                <fullName>ARC</fullName>
            </value>
            <value>
                <fullName>ARCO TRANSPORT CO</fullName>
            </value>
            <value>
                <fullName>HH</fullName>
            </value>
            <value>
                <fullName>ARCO ROADWAYS</fullName>
            </value>
            <value>
                <fullName>Arul Transport</fullName>
            </value>
            <value>
                <fullName>AKASH STORAGE</fullName>
            </value>
            <value>
                <fullName>ASHEESH LOGISTICS</fullName>
            </value>
            <value>
                <fullName>ASSOCIATED ROAD CARRIERS</fullName>
            </value>
            <value>
                <fullName>ATC TRANSPORT</fullName>
            </value>
            <value>
                <fullName>ATC LOGISTICAL SOLUTIONS PRIVATE LIMITED</fullName>
            </value>
            <value>
                <fullName>AVINASH TRANSPORT</fullName>
            </value>
            <value>
                <fullName>AWAGAMAN CARGO MOVERS</fullName>
            </value>
            <value>
                <fullName>AYUSH TRANSPORT</fullName>
            </value>
            <value>
                <fullName>BALAJI GOLDEN ROADLINES</fullName>
            </value>
            <value>
                <fullName>BARAL LOGISTICS PRIVATE LIMITED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>