force-app/main/default/objects/Order/fields/DRC_NBC_Unit_Of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Unit_Of_Measurement__c</fullName>
    <label>Unit Of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kilograms</fullName>
                <default>true</default>
                <label>Kilograms</label>
            </value>
            <value>
                <fullName>Pound</fullName>
            </value>
            <value>
                <fullName>u1</fullName>
                <isActive>false</isActive>
                <label>u1</label>
            </value>
            <value>
                <fullName>u2</fullName>
                <isActive>false</isActive>
                <label>u2</label>
            </value>
            <value>
                <fullName>u3</fullName>
                <isActive>false</isActive>
                <label>u3</label>
            </value>
            <value>
                <fullName>u4</fullName>
                <isActive>false</isActive>
                <label>u4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>