force-app/main/default/objects/Order/fields/DRC_NBC_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>