force-app/main/default/objects/Order/fields/DRC_NBC_Vessel_no_Flight_no__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Vessel_no_Flight_no__c</fullName>
    <label>Vessel no/Flight no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>