force-app/main/default/objects/Order/fields/DRC_NBC_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OTHER COUNTRY</fullName>
            </value>
            <value>
                <fullName>Andheri Air Port</fullName>
            </value>
            <value>
                <fullName>ARSHIYA LOGISTICS SERVICES LIMITED</fullName>
            </value>
            <value>
                <fullName>C4/2/2 D.R COATS INK &amp; RESINS PVT LTD (UNIT-III)</fullName>
            </value>
            <value>
                <fullName>CFS - JNPT</fullName>
            </value>
            <value>
                <fullName>Commercial Sample</fullName>
            </value>
            <value>
                <fullName>DARSHAN CHEMICALS</fullName>
            </value>
            <value>
                <fullName>D.R COATS INK &amp; RESINS PVT LTD (GUJ)</fullName>
            </value>
            <value>
                <fullName>E-123</fullName>
            </value>
            <value>
                <fullName>EXBHIWANDI TRANSPORTERS WAREHOUSE</fullName>
            </value>
            <value>
                <fullName>GATIK SYNTHESIS LLP</fullName>
            </value>
            <value>
                <fullName>D R Coats Ink and Resins Pvt Ltd (GUJ)</fullName>
            </value>
            <value>
                <fullName>Plot No.H-4/2-B</fullName>
            </value>
            <value>
                <fullName>Head Office</fullName>
            </value>
            <value>
                <fullName>IN TANSIT</fullName>
            </value>
            <value>
                <fullName>D.R COATS INK &amp; RESINS PVT LTD (UNIT-II)</fullName>
            </value>
            <value>
                <fullName>K-34</fullName>
            </value>
            <value>
                <fullName>PAONA CHEMPRO P LTD</fullName>
            </value>
            <value>
                <fullName>NHAVA SEVA PORT</fullName>
            </value>
            <value>
                <fullName>Production Sample</fullName>
            </value>
            <value>
                <fullName>Quality Control</fullName>
            </value>
            <value>
                <fullName>Rejection - RM &amp; FG</fullName>
            </value>
            <value>
                <fullName>Research &amp; development</fullName>
            </value>
            <value>
                <fullName>SAI SON RESINS AND CHEMICALS</fullName>
            </value>
            <value>
                <fullName>TARAPUR</fullName>
            </value>
            <value>
                <fullName>Vapi - Job Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>