force-app/main/default/objects/Order/fields/Fright_Required__c.field-meta.xml
<CustomField>
    <fullName>Fright_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fright Required</label>
    <type>Checkbox</type>
</CustomField>