force-app/main/default/objects/Order/fields/Is_Domestic_Merchnat__c.field-meta.xml
<CustomField>
    <fullName>Is_Domestic_Merchnat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Domestic Merchnat?</label>
    <type>Checkbox</type>
</CustomField>