force-app/main/default/objects/Order/fields/NBC_DRC_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>NBC_DRC_Dispatch_Date__c</fullName>
    <defaultValue>TODAY() + 21</defaultValue>
    <label>Dispatch Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>