force-app/main/default/objects/Order/fields/NBC_DRC_Order_DRC_Code__c.field-meta.xml
<CustomField>
    <fullName>NBC_DRC_Order_DRC_Code__c</fullName>
    <externalId>true</externalId>
    <label>Order DRC Code</label>
    <length>24</length>
    <type>Text</type>
</CustomField>