force-app/main/default/objects/Order/recordTypes/DRC_NBC_Regular.recordType-meta.xml
<RecordType>
    <fullName>DRC_NBC_Regular</fullName>
    <active>true</active>
    <label>Regular Order</label>
</RecordType>