force-app/main/default/objects/Order/validationRules/DRC_NBC_Capture_Other_Rejection_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>DRC_NBC_Capture_Other_Rejection_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  				ISBLANK(DRC_NBC_Other_Rejection_Reason__c),
 ISPICKVAL(DRC_NBC_Rejection_Reason1__c, &apos;Other&apos;)

				)</errorConditionFormula>
    <errorDisplayField>DRC_NBC_Other_Rejection_Reason__c</errorDisplayField>
    <errorMessage>Please provide Other Rejection Reason.</errorMessage>
</ValidationRule>