force-app/main/default/objects/Order/validationRules/DRC_NBC_Capture_Rejected_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>DRC_NBC_Capture_Rejected_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     Text(Status) == &apos;Rejected&apos;,
				 ISBLANK((DRC_NBC_Reject_Reason_Text__c))
)</errorConditionFormula>
    <errorMessage>Please provide Rejection Reason.</errorMessage>
</ValidationRule>