force-app/main/default/objects/Order/validationRules/Lock_Order_Type_For_Regular_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Order_Type_For_Regular_Order</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Regular_Order&quot;,  
    TEXT(Type) = &quot;Sample Order&quot;        
)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>For Regular Order record type, Order Type cannot be &apos;Sample Order&apos;.</errorMessage>
</ValidationRule>