force-app/main/default/objects/Order/validationRules/Lock_Order_Type_For_Sample_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Order_Type_For_Sample_Order</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Sample_Order&quot;,   
    TEXT(Type) &lt;&gt; &quot;Sample Order&quot;       
)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>For Sample Order record type, Order Type must be &apos;Sample Order&apos; and cannot be changed.</errorMessage>
</ValidationRule>