force-app/main/default/objects/Order/validationRules/Sales_Co_ordinator_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Co_ordinator_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    $Profile.Name = &quot;Sales Co-ordinator&quot;,
    ISCHANGED(Status)
)</errorConditionFormula>
    <errorMessage>You  cannot change Order Status.</errorMessage>
</ValidationRule>