force-app/main/default/objects/Order/validationRules/Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Test</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
        ISPICKVAL(Status, &quot;Draft&quot;),
    OR(
        ISPICKVAL(Status, &quot;Requested&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Tets</errorMessage>
</ValidationRule>