force-app/main/default/objects/Order/listViews/Domestic.listView-meta.xml
<ListView>
    <fullName>Domestic</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>DRC_NBC_Type__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>DRC_NBC_Type__c</field>
        <operation>equals</operation>
        <value>Domestic</value>
    </filters>
    <label>Domestic</label>
</ListView>