force-app/main/default/objects/Order/listViews/DRC_NBC_Sample_Orders.listView-meta.xml
<ListView>
    <fullName>DRC_NBC_Sample_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.NAME</columns>
    <columns>DRC_NBC_Record_Type_Name__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Sample_Order</value>
    </filters>
    <label>Sample Orders</label>
</ListView>